fix mixed content

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Slush</title>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic">
     <!-- inject:vendor:css -->
     <link rel="stylesheet" href="vendors.css">
     <!-- endinject -->
